[wheel]
universal = 1

[metadata]
name = hypothesis_networkx
author = P C Kroon
author_email = p.c.kroon@rug.nl
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
keywords = hypothesis networkx testing

[options]
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    networkx ~= 2.0
    hypothesis
zip-safe = False
